feat: add milk production to farm
